--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@portabletext/react": "^5.0.0",
     "@reduxjs/toolkit": "^2.11.0",
+    "@sanity/client": "^7.13.1",
+    "@sanity/image-url": "^2.0.2",
     "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
+    "framer-motion": "^12.23.25",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.1",
