Add data picker

--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@tailwindcss/vite": "^4.1.17",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.25",
     "react": "^19.2.0",
+    "react-datepicker": "^9.0.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
