--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.2.0",
     "react-datepicker": "^9.0.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-loader-spinner": "^8.0.0",
