--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@portabletext/react": "^5.0.0",
     "@reduxjs/toolkit": "^2.11.0",
     "@sanity/client": "^7.13.1",
@@ -29,7 +30,8 @@
     "react-loader-spinner": "^8.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.10.1",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
